# graphwars

./: Cargo.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: consts.rs  main.rs  models.rs  parse.rs  ui.rs  util.rs
src/systems/: graph_display.rs  mod.rs  util.rs
