cargo-features = ["codegen-backend"]

[package]
name = "graphwars"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bevy_egui = "0.32.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[unstable]
codegen-backend = true
